--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
+  sqflite: ^2.3.0
+  logger: ^2.0.2+1
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  shared_preferences: ^2.2.2
+  injectable: ^2.3.2
+  permission_handler: ^11.0.1
+  about: ^2.1.3
+  dio: ^5.3.3
+  appcheck: ^1.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  pubspec_extract: ^2.0.5
 
 flutter:
   uses-material-design: true
+flutter_intl:
+  enabled: true
